# quantum-learning-roadmap

./: .buildinfo  .gitignore  2020-w1-a-adder-ja.html  2020-w1-b-grover-ja.html  2021-autumn-lab3-qml-ja.html  2021-spring-lab1-toffoli.html  2021-spring-lab2-shor-ja.html  2021-spring-lab3-error-ja.html  2022-autumn-lab1-bernstein-vazirani.html  2022-autumn-lab1-runtime-ja.html  2023-spring-lab1-dynamic-ja.html  2023-spring-lab2-teleportation-ja.html  2023-spring-lab3-iqpe.html  2023-spring-lab4-error-correction.html  2024-spring-lab0-welcome-ja.html  2024-spring-lab1-qiskit10-ja-part1.html  2024-spring-lab1-qiskit10-ja-part2.html  2024-spring-lab2-transpilation-ja.html  2024-spring-lab3-ai-transpiler-ja.html  2024-spring-lab3-circuit-knitting-ja.html  2024-spring-lab4-vqc-hw-ja.html  README.md  genindex.html  intro.html  myst.yml  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: deploy-book.yml
_sources/: intro.md
scripts/: build.sh
src/: 2022-autumn-lab1-bernstein-vazirani.ipynb  2022-autumn-lab1-runtime-ja.ipynb  2023-spring-lab2-teleportation-ja.ipynb  2023-spring-lab3-iqpe.ipynb  2024-spring-lab2-transpilation-ja.ipynb  _config.yml  intro.md  learning-roadmap.md  myst.yml
